[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Controllers/TileController.gd" type="Script" id=1]
[ext_resource path="res://scripts/Controllers/TileControllerUtilities/EdgesArrayBuilder.gd" type="Script" id=2]
[ext_resource path="res://scripts/Controllers/TileControllerUtilities/FloorPartitioner.gd" type="Script" id=3]
[ext_resource path="res://scripts/Controllers/TileControllerUtilities/LedgeSuperimposer.gd" type="Script" id=4]
[ext_resource path="res://scripts/Controllers/TileControllerUtilities/LedgesArrayBuilder.gd" type="Script" id=5]
[ext_resource path="res://scripts/Controllers/TileControllerUtilities/BipartiteFordFulkerson.gd" type="Script" id=6]

[node name="TileController" type="Node2D"]
script = ExtResource( 1 )

[node name="EdgesArrayBuilder" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="FloorPartitioner" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="BipartiteFordFulkerson" type="Node2D" parent="FloorPartitioner"]
script = ExtResource( 6 )

[node name="LedgesArrayBuilder" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="LedgeSuperimposer" type="Node2D" parent="."]
script = ExtResource( 4 )
